[gd_scene load_steps=8 format=2]

[ext_resource path="res://Fonts/Rowdies-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/Games/StackTower/StackTower.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 5, 540 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 125, 5 )

[sub_resource type="SegmentShape2D" id=4]
a = Vector2( 10, 300 )
b = Vector2( 470, 300 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 1200, 100 )

[sub_resource type="DynamicFont" id=8]
size = 192
use_mipmaps = true
font_data = ExtResource( 1 )

[node name="StackPower" type="Node2D"]
script = ExtResource( 2 )

[node name="Seperator" type="Node2D" parent="."]

[node name="Line0" type="Area2D" parent="Seperator"]
position = Vector2( 480, 0 )

[node name="Line2D" type="Line2D" parent="Seperator/Line0"]
points = PoolVector2Array( 0, 0, 0, 1080 )
default_color = Color( 0, 0, 0, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Seperator/Line0"]
position = Vector2( 0, 540 )
shape = SubResource( 5 )

[node name="Line1" type="Area2D" parent="Seperator"]
position = Vector2( 960, 0 )

[node name="Line2D" type="Line2D" parent="Seperator/Line1"]
points = PoolVector2Array( 0, 0, 0, 1080 )
default_color = Color( 0, 0, 0, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Seperator/Line1"]
position = Vector2( 0, 540 )
shape = SubResource( 5 )

[node name="Line2" type="Area2D" parent="Seperator"]
position = Vector2( 1440, 0 )

[node name="Line2D" type="Line2D" parent="Seperator/Line2"]
points = PoolVector2Array( 0, 0, 0, 1080 )
default_color = Color( 0, 0, 0, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Seperator/Line2"]
position = Vector2( 0, 540 )
shape = SubResource( 5 )

[node name="Line3" type="Area2D" parent="Seperator"]

[node name="Line2D" type="Line2D" parent="Seperator/Line3"]
points = PoolVector2Array( 0, 0, 0, 1080 )
default_color = Color( 0, 0, 0, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Seperator/Line3"]
position = Vector2( 0, 540 )
shape = SubResource( 5 )

[node name="Line4" type="Area2D" parent="Seperator"]
position = Vector2( 1920, 0 )

[node name="Line2D" type="Line2D" parent="Seperator/Line4"]
points = PoolVector2Array( 0, 0, 0, 1080 )
default_color = Color( 0, 0, 0, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Seperator/Line4"]
position = Vector2( 0, 540 )
shape = SubResource( 5 )

[node name="Platform" type="Node2D" parent="."]

[node name="Line0" type="StaticBody2D" parent="Platform"]

[node name="Line2D" type="Line2D" parent="Platform/Line0"]
points = PoolVector2Array( 115, 810, 365, 810 )
default_color = Color( 0, 0, 0, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platform/Line0"]
position = Vector2( 240, 810 )
shape = SubResource( 6 )

[node name="Line1" type="StaticBody2D" parent="Platform"]
position = Vector2( 480, 0 )

[node name="Line2D" type="Line2D" parent="Platform/Line1"]
points = PoolVector2Array( 115, 810, 365, 810 )
default_color = Color( 0, 0, 0, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platform/Line1"]
position = Vector2( 240, 810 )
shape = SubResource( 6 )

[node name="Line2" type="StaticBody2D" parent="Platform"]
position = Vector2( 960, 0 )

[node name="Line2D" type="Line2D" parent="Platform/Line2"]
points = PoolVector2Array( 115, 810, 365, 810 )
default_color = Color( 0, 0, 0, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platform/Line2"]
position = Vector2( 240, 810 )
shape = SubResource( 6 )

[node name="Line3" type="StaticBody2D" parent="Platform"]
position = Vector2( 1440, 0 )

[node name="Line2D" type="Line2D" parent="Platform/Line3"]
points = PoolVector2Array( 115, 810, 365, 810 )
default_color = Color( 0, 0, 0, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platform/Line3"]
position = Vector2( 240, 810 )
shape = SubResource( 6 )

[node name="Detection" type="Node2D" parent="."]

[node name="Detector0" type="Area2D" parent="Detection"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detection/Detector0"]
shape = SubResource( 4 )

[node name="Line2D" type="Line2D" parent="Detection/Detector0"]
points = PoolVector2Array( 10, 300, 470, 300 )
default_color = Color( 1, 0, 0, 0.52549 )

[node name="Detector1" type="Area2D" parent="Detection"]
position = Vector2( 480, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detection/Detector1"]
shape = SubResource( 4 )

[node name="Line2D" type="Line2D" parent="Detection/Detector1"]
points = PoolVector2Array( 10, 300, 470, 300 )
default_color = Color( 1, 0, 0, 0.52549 )

[node name="Detector2" type="Area2D" parent="Detection"]
position = Vector2( 960, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detection/Detector2"]
shape = SubResource( 4 )

[node name="Line2D" type="Line2D" parent="Detection/Detector2"]
points = PoolVector2Array( 10, 300, 470, 300 )
default_color = Color( 1, 0, 0, 0.52549 )

[node name="Detector3" type="Area2D" parent="Detection"]
position = Vector2( 1440, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detection/Detector3"]
shape = SubResource( 4 )

[node name="Line2D" type="Line2D" parent="Detection/Detector3"]
points = PoolVector2Array( 10, 300, 470, 300 )
default_color = Color( 1, 0, 0, 0.52549 )

[node name="Spawner" type="Node2D" parent="."]

[node name="pos0" type="Position2D" parent="Spawner"]
position = Vector2( 115, 150 )

[node name="pos1" type="Position2D" parent="Spawner"]
position = Vector2( 595, 150 )

[node name="pos2" type="Position2D" parent="Spawner"]
position = Vector2( 1075, 150 )

[node name="pos3" type="Position2D" parent="Spawner"]
position = Vector2( 1555, 150 )

[node name="SpawnedBlocks" type="Node2D" parent="."]

[node name="Tween" type="Tween" parent="."]

[node name="Destructor" type="Area2D" parent="."]
position = Vector2( 960, 1280 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Destructor"]
shape = SubResource( 7 )

[node name="Particles" type="Node2D" parent="."]

[node name="Countdown" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1920.0
margin_bottom = 1080.0

[node name="Text0" type="Label" parent="Countdown"]
margin_left = 240.0
margin_top = 420.0
margin_right = 240.0
margin_bottom = 660.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 8 )
align = 1
valign = 1

[node name="Text1" type="Label" parent="Countdown"]
margin_left = 720.0
margin_top = 420.0
margin_right = 720.0
margin_bottom = 660.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 8 )
align = 1
valign = 1

[node name="Text2" type="Label" parent="Countdown"]
margin_left = 1200.0
margin_top = 420.0
margin_right = 1200.0
margin_bottom = 660.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 8 )
align = 1
valign = 1

[node name="Text3" type="Label" parent="Countdown"]
margin_left = 1680.0
margin_top = 420.0
margin_right = 1680.0
margin_bottom = 660.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 8 )
align = 1
valign = 1

[connection signal="body_entered" from="Seperator/Line0" to="." method="_on_destructor_body_entered"]
[connection signal="body_entered" from="Seperator/Line1" to="." method="_on_destructor_body_entered"]
[connection signal="body_entered" from="Seperator/Line2" to="." method="_on_destructor_body_entered"]
[connection signal="body_entered" from="Seperator/Line3" to="." method="_on_destructor_body_entered"]
[connection signal="body_entered" from="Seperator/Line4" to="." method="_on_destructor_body_entered"]
[connection signal="body_entered" from="Detection/Detector0" to="." method="_on_detection_zone_reached" binds= [ 0 ]]
[connection signal="body_entered" from="Detection/Detector1" to="." method="_on_detection_zone_reached" binds= [ 1 ]]
[connection signal="body_entered" from="Detection/Detector2" to="." method="_on_detection_zone_reached" binds= [ 2 ]]
[connection signal="body_entered" from="Detection/Detector3" to="." method="_on_detection_zone_reached" binds= [ 3 ]]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="body_entered" from="Destructor" to="." method="_on_destructor_body_entered"]
